--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,12 +19,14 @@ idna==3.10
 incremental==24.7.2
 itsdangerous==2.2.0
 Jinja2==3.1.5
+Mako==1.3.8
 MarkupSafe==3.0.2
 mininet==2.3.0.dev6
 networkx==3.4.2
 protobuf==5.29.3
 psycopg==3.2.4
 pyelftools==0.30
+python-dotenv==1.0.1
 python-engineio==4.11.2
 python-socketio==5.12.1
 setuptools==75.8.0
