--- a/frontend-globalState/package.json
+++ b/frontend-globalState/package.json
@@ -19,12 +19,14 @@
     "@reactflow/core": "^11.11.4",
     "@reduxjs/toolkit": "^2.5.1",
     "@xyflow/react": "^12.3.5",
+    "apexcharts": "^4.4.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "cytoscape": "^3.30.2",
     "d3": "^7.9.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
